@@ -261,5 +261,14 @@ Jorge implemented the code corresponding to decompositions of ideals into irredu
 
 </Section>
 
+<Section><Heading>Functions implemented by F. Strazzanti</Heading>
+Francesco hepled in the implementation of the following methods.
+
+  <P/>
+  <Ref Prop="IsAlmostCanonicalIdeal"/>,
+
+
+</Section>
+
 
 </Appendix>
